Trying to initiate Travis CI build - 1

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,13 @@ python:
   - "3.6"
   - "3.7"
 
-services: postgresql
-
 install:
-  - pip install --upgrade -r requirements.txt
+  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
+  - bash Miniconda3-latest-Linux-x86_64.sh
+  - conda create -n ml_playground
+  - conda activate ml_playground
+  - conda install pip
+  - pip3 install --upgrade -r requirements.txt
 
 script:
   - python manage.py test
