Adding secrets to GitHub Actions

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,3 +28,9 @@ jobs:
     - name: Run Tests
       run: |
         python manage.py test
+      with:
+        DJANGO_DATABASE_ENGINE: ${{ secrets.DJANGO_DATABASE_ENGINE }}
+        DJANGO_DATABASE_NAME: ${{ secrets.DJANGO_DATABASE_NAME }}
+        DJANGO_DEBUG: ${{ secrets.DJANGO_DEBUG }}
+        DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+        FILE_PATH_EOS_CMSML4DC: ${{ secrets.FILE_PATH_EOS_CMSML4DC }}
