--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,4 +1,4 @@
-name: Django CI
+name: Django CI - Updated
 
 on:
   push:
@@ -17,15 +17,25 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run Tests
+
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
+    - name: Run Unit Tests
       env:
         DIR_PATH_EOS_CMSML4DC: ${{ secrets.DIR_PATH_EOS_CMSML4DC }}
         DJANGO_DATABASE_ENGINE: ${{ secrets.DJANGO_DATABASE_ENGINE }}
@@ -35,3 +45,12 @@ jobs:
         FILE_PATH_EOS_CMSML4DC: ${{ secrets.FILE_PATH_EOS_CMSML4DC }}
       run: |
         python manage.py test
+
+    - name: Run Functional Tests with Selenium on Chrome
+        WEB_BROWSER: Chrome
+      run: |
+        python manage.py test functional_tests
+    - name: Run Functional Tests with Selenium on Firefox
+        WEB_BROWSER: Firefox
+      run: |
+        python manage.py test functional_tests
