--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -61,12 +61,24 @@ jobs:
 
     - name: Run Functional Tests with Selenium on Chrome
       env:
+        DIR_PATH_EOS_CMSML4DC: /home/runner/work/MLplayground/MLplayground/histograms/test_files/
+        DJANGO_DATABASE_ENGINE: ${{ secrets.DJANGO_DATABASE_ENGINE }}
+        DJANGO_DATABASE_NAME: ${{ secrets.DJANGO_DATABASE_NAME }}
+        DJANGO_DEBUG: ${{ secrets.DJANGO_DEBUG }}
+        DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+        FILE_PATH_EOS_CMSML4DC: ${{ secrets.FILE_PATH_EOS_CMSML4DC }}
         WEB_BROWSER: Chrome
       run: |
         python manage.py test functional_tests
 
     - name: Run Functional Tests with Selenium on Firefox
       env:
+        DIR_PATH_EOS_CMSML4DC: /home/runner/work/MLplayground/MLplayground/histograms/test_files/
+        DJANGO_DATABASE_ENGINE: ${{ secrets.DJANGO_DATABASE_ENGINE }}
+        DJANGO_DATABASE_NAME: ${{ secrets.DJANGO_DATABASE_NAME }}
+        DJANGO_DEBUG: ${{ secrets.DJANGO_DEBUG }}
+        DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+        FILE_PATH_EOS_CMSML4DC: ${{ secrets.FILE_PATH_EOS_CMSML4DC }}
         WEB_BROWSER: Firefox
       run: |
         python manage.py test functional_tests
