--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -46,6 +46,7 @@ jobs:
         wget -q https://root.cern/download/root_v6.26.10.Linux-ubuntu22-x86_64-gcc11.3.tar.gz
         tar -xzf root_v6.26.10.Linux-ubuntu22-x86_64-gcc11.3.tar.gz
         source root/bin/thisroot.sh
+        echo $PYTHONPATH
 
     # - name: Lint with black
     #   uses: psf/black@stable
