Refer to ROOT container from Docker Hub

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
 
-    runs-on: rootproject/root
+    runs-on: docker://rootproject/root
     strategy:
       max-parallel: 4
       #matrix:
