--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
 
-    runs-on: docker://rootproject/root
+    runs-on: ubuntu-20.04
     strategy:
       max-parallel: 4
       #matrix:
@@ -30,6 +30,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: docker://rootproject/root:6.26.02-ubuntu20.04
 
     #- name: Set up Python ${{ matrix.python-version }}
     #  uses: actions/setup-python@v2
