Fixing ROOT docker image call again, sorry

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -10,6 +10,7 @@ jobs:
   build:
 
     runs-on: ubuntu-20.04
+    container: rootproject/root:6.26.02-ubuntu20.04
     strategy:
       max-parallel: 4
       #matrix:
@@ -70,7 +71,6 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --ignore=E50,F401,F403
 
     - name: Run Unit Tests
-      uses: docker://rootproject/root:6.26.02-ubuntu20.04
       env:
         DIR_PATH_EOS_CMSML4DC: /home/runner/work/MLplayground/MLplayground/histograms/test_files/
         DJANGO_DATABASE_ENGINE: ${{ secrets.DJANGO_DATABASE_ENGINE }}
