--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -39,6 +39,8 @@ jobs:
 
     - name: Install Dependencies
       run: |
+        apt update
+        apt install --upgrade python3-pip
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
