--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Install Dependencies
       run: |
         apt update
-        apt install --upgrade python3-pip
+        apt install -y --upgrade python3-pip
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
