--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -39,9 +39,8 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        apt update
-        apt install -y --upgrade python3-pip
-        service postgresql restart
+        wget https://bootstrap.pypa.io/get-pip.py
+        python get-pip.py
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
