--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,10 +1,13 @@
 name: Django CI - Updated
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+# Temporarily disable until an image
+# with ROOT and python 3.8 is available.
+# TODO: use Dockerfile to push an image to Dockerhub perhaps
+# on:
+  # push:
+    # branches: [ master ]
+  # pull_request:
+    # branches: [ master ]
 
 jobs:
   build:
