--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -3,11 +3,11 @@ name: Django CI - Updated
 # Temporarily disable until an image
 # with ROOT and python 3.8 is available.
 # TODO: use Dockerfile to push an image to Dockerhub perhaps
-# on:
-  # push:
-    # branches: [ master ]
-  # pull_request:
-    # branches: [ master ]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
@@ -17,7 +17,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.8]
 
     services:
       postgres:
