--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ django = "^5.0.1"
 psycopg2-binary = "^2.9.9"
 djangorestframework = "^3.14.0"
 drf-spectacular = "^0.27.0"
+celery = "^5.3.6"
+redis = "^5.0.1"
+django-celery-results = "^2.5.1"
 
 
 [tool.poetry.group.dev.dependencies]
