--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-plotly.js": "^2.6.0",
+    "react-resize-detector": "^10.0.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
