--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "date-fns": "^3.3.1",
     "plotly.js": "^2.28.0",
