--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ drf-spectacular = "^0.27.0"
 celery = "^5.3.6"
 redis = "^5.0.1"
 django-celery-results = "^2.5.1"
+django-filter = "^23.5"
 
 
 [tool.poetry.group.dev.dependencies]
