--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "date-fns": "^3.3.1",
+    "env-cmd": "^10.1.0",
     "plotly.js": "^2.28.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
@@ -23,8 +24,9 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "env-cmd -e dev react-scripts start",
+    "build:staging": "env-cmd -e staging react-scripts build",
+    "build:prod": "env-cmd -e prod react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
