--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,34 @@
   "name": "mldashboard",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "build:prod": "env-cmd -e prod react-scripts build",
+    "build:staging": "env-cmd -e staging react-scripts build",
+    "check-unused-deps": "depcheck --oneline",
+    "eject": "react-scripts eject",
+    "lint": "eslint \"*.+(json|js|ts|tsx|jsx)\" \"+(src|public)/**/*.+(json|ts|tsx|js|jsx)\" --no-error-on-unmatched-pattern",
+    "lint:fix": "eslint \"*.+(json|js|ts|tsx|jsx)\" \"+(src|public)/**/*.+(ts|tsx|js|jsx)\" --fix --no-error-on-unmatched-pattern && prettier --write --no-error-on-unmatched-pattern \"*.+(md)\" \"+(src|public)/**/*.+(md)\"",
+    "start": "env-cmd -e dev react-scripts start",
+    "test": "react-scripts test"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -23,32 +51,21 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
-  "scripts": {
-    "start": "env-cmd -e dev react-scripts start",
-    "build:staging": "env-cmd -e staging react-scripts build",
-    "build:prod": "env-cmd -e prod react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "depcheck": "^1.4.7",
+    "eslint": "^8.56.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-json-format": "^2.0.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3.2.4"
+  },
+  "engines": {
+    "node": ">=20.11.0, <21.0.0"
   }
 }
