--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,7 @@ django-filter = "^23.5"
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.0"
+pre-commit = "^3.6.0"
 
 [build-system]
 requires = ["poetry-core"]
