--- a/backend/.pre-commit-config.yaml
+++ b/backend/.pre-commit-config.yaml
@@ -1,15 +1,37 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
+fail_fast: true
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: check-added-large-files
-- repo: https://github.com/psf/black
-  rev: 24.1.1
-  hooks:
+    - id: trailing-whitespace
+    - id: end-of-file-fixer
+    - id: check-yaml
+    - id: check-added-large-files
+  - repo: https://github.com/psf/black
+    rev: 24.1.1
+    hooks:
     - id: black
-      language_version: python3.11
+      args: [
+        --line-length=120
+      ]
+  - repo: https://github.com/PyCQA/flake8
+    rev: 7.0.0
+    hooks:
+    - id: flake8
+      additional_dependencies: [flake8-bugbear]
+      args: [
+        --max-line-length=120,
+        --max-complexity=10
+      ]
+  - repo: https://github.com/timothycrosley/isort
+    rev: 5.13.2
+    hooks:
+    - id: isort
+      args: [
+        --atomic,
+        --profile=black,
+        --line-length=120,
+        --skip-gitignore
+      ]
