--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ celery = "^5.3.6"
 redis = "^5.0.1"
 django-celery-results = "^2.5.1"
 django-filter = "^23.5"
+django-cors-headers = "^4.3.1"
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.0"
