--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "bootstrap": "^5.3.2",
     "date-fns": "^3.3.1",
     "env-cmd": "^10.1.0",
+    "oidc-client-ts": "^3.0.0",
     "plotly.js": "^2.28.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
@@ -45,6 +46,7 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^18.2.0",
+    "react-oidc-context": "^3.0.0",
     "react-plotly.js": "^2.6.0",
     "react-resize-detector": "^10.0.1",
     "react-router-dom": "^6.21.3",
