--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,7 +24,7 @@ pre-commit = "^3.6.0"
 poethepoet = "^0.24.4"
 
 [tool.poe.tasks]
-start = "./scripts/start.sh"
+start-dev = "./scripts/start-dev.sh"
 
 [build-system]
 requires = ["poetry-core"]
