--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,8 @@ django-filter = "^23.5"
 django-cors-headers = "^4.3.1"
 python-keycloak = "^3.7.0"
 python-dotenv = "^1.0.1"
+uvicorn = "^0.27.0.post1"
+gunicorn = "^21.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
