--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -17,8 +17,13 @@ RUN yarn install && yarn build:prod
 FROM nginx:stable-alpine
 
 COPY --from=builder /usr/src/app/build /usr/share/nginx/html
-COPY --from=builder /usr/src/app/nginx/nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /usr/src/app/nginx/nginx.conf /etc/nginx/nginx.conf
 
-EXPOSE 80
+RUN chmod -R 777 /var/log/nginx /var/cache/nginx /var/run \
+     && chgrp -R 0 /etc/nginx \
+     && chmod -R g+rwX /etc/nginx \
+     && rm /etc/nginx/conf.d/default.conf
+
+EXPOSE 8081
 
 CMD ["nginx", "-g", "daemon off;"]
