build: fill production env-cmdrc fields

--- a/frontend/.env-cmdrc
+++ b/frontend/.env-cmdrc
@@ -15,9 +15,9 @@
   },
   "prod": {
     "REACT_APP_ENV": "prod",
-    "REACT_APP_API_URL": "NOT DEPLOYED YET",
+    "REACT_APP_API_URL": "https://dqmdc-ml4ad-api.web.cern.ch/api/v1",
     "REACT_APP_OIDC_AUTHORITY": "https://auth.cern.ch/auth/realms/cern/",
     "REACT_APP_OIDC_SCOPE": "openid profile email",
-    "REACT_APP_OIDC_PUBLIC_CLIENT_ID": "NOT CREATED YET"
+    "REACT_APP_OIDC_PUBLIC_CLIENT_ID": "dqmdc-ml4ad-public-app"
   }
 }
