--- a/backend/.pre-commit-config.yaml
+++ b/backend/.pre-commit-config.yaml
@@ -6,13 +6,18 @@ repos:
     rev: v4.5.0
     hooks:
     - id: trailing-whitespace
+      files: ^backend
     - id: end-of-file-fixer
+      files: ^backend
     - id: check-yaml
+      files: ^backend
     - id: check-added-large-files
+      files: ^backend
   - repo: https://github.com/psf/black
     rev: 24.1.1
     hooks:
     - id: black
+      files: ^backend
       args: [
         --line-length=120
       ]
@@ -20,6 +25,7 @@ repos:
     rev: 7.0.0
     hooks:
     - id: flake8
+      files: ^backend
       additional_dependencies: [flake8-bugbear]
       args: [
         --max-line-length=120,
@@ -29,6 +35,7 @@ repos:
     rev: 5.13.2
     hooks:
     - id: isort
+      files: ^backend
       args: [
         --atomic,
         --profile=black,
