--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,6 +25,9 @@ gunicorn = "^21.2.0"
 pre-commit = "^3.6.0"
 poethepoet = "^0.24.4"
 flower = "^2.0.1"
+tqdm = "^4.66.2"
+psutil = "^5.9.8"
+matplotlib = "^3.8.3"
 
 [tool.poe.tasks]
 start-dev = "./scripts/start-dev.sh"
